src/styles/Button.css
.button--tab {
    overflow: hidden;
    position: relative;
    border-radius: .5rem .5rem 0 0;
    gap: 1rem;
    padding: 1rem;
    justify-content: start;
    color: var(--c-minor-text);
    border: 1px solid var(--c-major-background);
    border-bottom: 1px solid var(--c-mid-background);
    width: min-content;
    max-width: 3rem;
    min-height: 3rem;
    bottom: -1px;
    background-color: var(--c-mid-background);
    backdrop-filter: blur(1rem);
    transition: background-color .5s, color .5s, border .5s, box-shadow .5s, max-width .5s;
}

.button--minor {
    overflow: hidden;
    justify-content: start;
    max-width: 2rem;
    padding: .25rem .5rem;
    gap: .5rem;
    transition: color .5s, max-width .5s;
}

.button--active--tab {
    color: var(--c-major-text);
    max-width: 10rem;
}

.button--active--minor {
    color: var(--c-major-text);
    max-width: 10rem;
}

